# SEI-Stamper

./: .gitignore  CMakeLists.txt  README.chs.md  README.jpn.md  README.md  build_and_install.bat  needs.md
.github/: FUNDING.yml
data/locale/: en-US.ini  zh-CN.ini
src/: amd-encoder.c  amd-encoder.h  ntp-client.c  ntp-client.h  nvenc-encoder.c  nvenc-encoder.h  obs-sei-stamper-plugin.c  qsv-encoder.c  qsv-encoder.h  sei-handler.c  sei-handler.h  sei-receiver-source.c  sei-receiver-source.h  sei-stamper-encoder.c  sei-stamper-encoder.h  unified-encoder.c  unified-encoder.h
